--- a/main.ipynb
+++ b/main.ipynb
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,45 +495,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARWICGLO:\n",
-      "Cet MERGIO:\n",
-      "Halight Edward him it? or ha\n",
-      "Selual:\n",
-      "Why, alrees, pile rescable of Bown, Morthrous\n",
-      "Me, the wombrages, I think nor brother linies;\n",
-      "Vilcosed simsely of God my love: fell pe.\n",
-      "Butk, Bleed, in fly.\n",
+      "COMANTIS:\n",
+      "Why phipest one dread,-for Edward:\n",
+      "Can all world of laites it by I know she will have wrong whortlams\n",
+      "art wreting whom to guids, ortain I'll quee's him\n",
+      "ISABELLA: a here in has jiers,\n",
+      "Scome, hath her eart, poil'd flowers tongue all,\n",
+      "Your so, quah; can all I hope of Bodward,\n",
+      "What I thee see of TEthonoube, last,\n",
+      "Even the pluck of I say were heavensalis!\n",
+      "By not more accal. Romeo dread, mood have the common,\n",
+      "Hadlian of was powers vassion being.\n",
       "\n",
-      "PAULINA:\n",
-      "Shall dost, he betchink, I wails so,\n",
-      "My orace coutings masterham he as out:\n",
-      "We will he speled, how to thing my heart verscase\n",
-      "Your commanaming in jour headly ever\n",
-      "For ever much them from coldice, that will kim untate.\n",
+      "SICHAS Lews War I have appect, and hath repenate!\n",
+      "But we now rich be call'd dost this was the is disposes\n",
+      "All I could is for his your hear smist good\n",
+      "My busice, I there is strim his I speak of love pitter,\n",
+      "Which fright had give meme have pieversing:\n",
+      "Let my yourself on base, my peaceful wither of\n",
+      "Howld; the hope this should will walk I saw'll\n",
+      "With so poveage.\n",
       "\n",
-      "KING RICHARD II:\n",
-      "Will know, an ever mouth-dire e'll no her should\n",
-      "The fokery-marcius his doutague thing care.\n",
-      "\n",
-      "AUTIUS:\n",
-      "Thirlish mother no mister: that with fashame,\n",
-      "pelace I'll be timbertied come humberse,\n",
-      "We leggage, for God's stepent!\n",
-      "For thine ols. Beasom of mustice: now him\n",
-      "to Ell be complands: thilegy the world as call out us,\n",
-      "Or strainst dign; but speak thought your our comparen\n",
-      "Of speakely thy finders.\n",
-      "And bain, there, as of Warry, coward\n",
-      "And france, commander dream'st. Yes jear\n",
-      "to the kine our had nights\n",
-      "me ends; and so in promise both will \n"
+      "CORIOLANUS:\n",
+      "Socis the grace; mutimer, what gover, I'lco\n",
+      "Eve a delaze third faces the eighamer remies.\n",
+      "Do Nighmost to doth Mowe all meghore give\n",
+      "The give return of Leggerand by of Yea \n"
      ]
     }
    ],
