--- a/main.ipynb
+++ b/main.ipynb
@@ -19,7 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('dataset.txt') as f:\n",
+    "dataset = input('Enter dataset: ')\n",
+    "\n",
+    "with open(f'{dataset}') as f:\n",
     "\ttext = f.read()\n",
     "\n",
     "vocabulary = sorted(list(set(text)))\n",
@@ -40,7 +42,7 @@
    "source": [
     "data = torch.tensor(encode(text))\n",
     "\n",
-    "split_v = int(0.9 * len(data))\n",
+    "split_v = int(0.97 * len(data))\n",
     "\n",
     "train = data[:split_v]\n",
     "test = data[split_v:]\n",
@@ -55,7 +57,7 @@
    "outputs": [],
    "source": [
     "batch_size = 16\n",
-    "block_size = 128\n",
+    "block_size = 64\n",
     "embedding_dimensions = 64\n",
     "num_heads = 8\n",
     "head_size = embedding_dimensions // num_heads\n",
@@ -222,7 +224,6 @@
     "optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)\n",
     "\n",
     "losses = []\n",
-    "\n",
     "for i in range(iterations):\n",
     "\tx, y = get_batch(train)\n",
     "\n",
